# word-mention-func

./: .gitignore  Dockerfile  README.Docker.md  README.md  compose.yaml  config.json  config.py  connection.py  connector.py  errors.py  main.py  main.sample.py  main2.py  pyproject.toml  static.py  word_lists_20250414.json  word_mention.py
.github/workflows/: build-and-push.yml
